--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3868,3 +3868,10 @@ input, select, textarea {
 
 
 
+		.inner{position: absolute;
+			top: 50%;
+			left: 50%;
+			-moz-transform: translateX(-50%) translateY(-50%);
+			-webkit-transform: translateX(-50%) translateY(-50%);
+			transform: translateX(-50%) translateY(-50%);
+		}
