congratulations screen updated

--- a/font.css
+++ b/font.css
@@ -292,7 +292,7 @@ animation: noise-anim-2 3s infinite linear alternate-reverse;
 color: white;
 font-family: 'Courier New', Courier, monospace;
 font-weight: 900;
-font-size: 500%;
+font-size: 7vw;
 position: relative;
 
 
